--- a/ClientEmail1.html
+++ b/ClientEmail1.html
@@ -4,6 +4,7 @@
     <base target="_top">
   </head>
   <body>
+    <div style="font-family: verdana, geneva, sans-serif; font-size: 10pt;>
   <p style="text-align: center; font-size: 15px;"><span style="font-family: verdana, geneva, sans-serif; font-size: 10pt;"><strong>&nbsp;</strong></span></p>
   <p dir="ltr"><span style="font-family: verdana, geneva, sans-serif; font-size: 10pt;">
   Hello <?= firstName ?>,
@@ -31,6 +32,6 @@
   <p dir="ltr" style="text-align: left;"><span style="font-family: verdana, geneva, sans-serif; font-size: 10pt;">Please note that paying through PayPal has a 5% fee which has to be added to the total amount when making payment.</span></p>
   <p dir="ltr"><span style="font-family: verdana, geneva, sans-serif; font-size: 10pt;">Thanks a million for your business, we will ensure your day runs smoothly.</span></p>
   <p style="font-size: 15px; text-align: left;"><img style="color: #626262;" src="blob:https://www.tiny.cloud/21facf76-cdba-4023-bb12-ee3ebd770a14" width="143" height="157" /><br /><br /></p>
-  <p>&nbsp;</p>    
+  </div>   
   </body>
 </html>
